# Nazartepa-103-PRO

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_emergency.py  0003_ai_triage.py  0004_ambulance_dispatch.py
backend/app/: main.py  models.py
backend/app/core/: config.py  database.py  deps.py  logging.py  middleware.py  security.py
backend/app/modules/ai_triage/: llm_providers.py  prompts.py  provider.py  rule_based.py  service.py
backend/app/modules/ambulance/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  rbac.py  router.py  schemas.py  service.py
backend/app/modules/dispatch/: models.py  router.py  schemas.py  service.py
backend/app/modules/emergency/: models.py  router.py  schemas.py  service.py
backend/app/modules/realtime/: manager.py  router.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/app/scripts/: seed.py
backend/app/shared/: base.py  exceptions.py  geo.py  pagination.py
backend/app/tests/: conftest.py  test_ai_triage.py  test_ambulance_dispatch.py  test_auth.py  test_emergency.py  test_rbac.py
docs/: architecture.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: CallList.tsx  MapView.tsx  PriorityBadge.tsx
frontend/lib/: api.ts  auth.tsx  i18n.ts  types.ts  (+1 more)
(+2 files in other folders)
